src/test/ui/compile-fail-migration/borrowck/borrowck-fn-in-const-c.nll.stderr
error[E0597]: `local.inner` does not live long enough
  --> $DIR/borrowck-fn-in-const-c.rs:27:16
   |
LL |         return &local.inner; //~ ERROR does not live long enough
   |                ^^^^^^^^^^^^ borrowed value does not live long enough
LL |     }
   |     - `local.inner` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
